--- a/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-spring.application.name=rest-with-spring-boot-and-java
+spring:
+  application:
+    name: rest-with-spring-boot-and-java
+  datasource:
+    url: jdbc:mysql://localhost:3306/rest_with_spring_boot?useTimezone=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root123457
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        show-sql: false
