--- a/rest-with-spring-boot-and-java/src/main/resources/application.yml
+++ b/rest-with-spring-boot-and-java/src/main/resources/application.yml
@@ -14,3 +14,9 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: false
+logging:
+  level:
+    root: WARN
+    com.example: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
