--- a/rest-with-spring-boot-and-java/src/test/resources/application.yml
+++ b/rest-with-spring-boot-and-java/src/test/resources/application.yml
@@ -2,6 +2,8 @@ server:
     port: 8888
 cors:
   originPatterns: "http://localhost:8080,http://localhost:3000"
+file:
+    upload-dir: /Code/UploadDir
 spring:
   application:
     name: rest-with-spring-boot-and-java
@@ -16,6 +18,12 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: false
         open-in-view: false
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
 logging:
   level:
     root: INFO
