--- a/rest-with-spring-boot-and-java/pom.xml
+++ b/rest-with-spring-boot-and-java/pom.xml
@@ -19,6 +19,8 @@
 		<dozer.version>7.0.0</dozer.version>
 		<springdoc.version>2.7.0</springdoc.version>
 		<testcontainers.version>1.20.4</testcontainers.version>
+        <commons-csv.version>1.12.0</commons-csv.version>
+        <apache.poi.version>5.4.0</apache.poi.version>
 	</properties>
 	<dependencies>
 
@@ -52,6 +54,18 @@
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${commons-csv.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
