--- a/rest-with-spring-boot-and-java/pom.xml
+++ b/rest-with-spring-boot-and-java/pom.xml
@@ -21,6 +21,8 @@
 		<testcontainers.version>1.20.4</testcontainers.version>
         <commons-csv.version>1.12.0</commons-csv.version>
         <apache.poi.version>5.4.0</apache.poi.version>
+        <jasperreports.version>7.0.1</jasperreports.version>
+        <zxing.version>3.5.3</zxing.version>
 	</properties>
 	<dependencies>
 
@@ -65,6 +67,36 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>${apache.poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>${jasperreports.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-fonts</artifactId>
+            <version>${jasperreports.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-pdf</artifactId>
+            <version>${jasperreports.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>${zxing.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${zxing.version}</version>
         </dependency>
 
 		<dependency>
