--- a/rest-with-spring-boot-and-java/src/test/resources/application.yml
+++ b/rest-with-spring-boot-and-java/src/test/resources/application.yml
@@ -4,6 +4,9 @@ cors:
   originPatterns: "http://localhost:8080,http://localhost:3000"
 file:
     upload-dir: /Code/UploadDir
+email:
+  subject: "Default Subject"
+  message: "Default Message"
 spring:
   application:
     name: rest-with-spring-boot-and-java
@@ -18,6 +21,18 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: false
         open-in-view: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
   servlet:
     multipart:
       enabled: true
