--- a/rest-with-spring-boot-and-java/pom.xml
+++ b/rest-with-spring-boot-and-java/pom.xml
@@ -23,6 +23,7 @@
         <apache.poi.version>5.4.0</apache.poi.version>
         <jasperreports.version>7.0.1</jasperreports.version>
         <zxing.version>3.5.3</zxing.version>
+        <java-jwt.version>4.4.0</java-jwt.version>
 	</properties>
 	<dependencies>
 
@@ -40,6 +41,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.hateoas</groupId>
