--- a/rest-with-spring-boot-and-java/src/test/resources/application.yml
+++ b/rest-with-spring-boot-and-java/src/test/resources/application.yml
@@ -3,7 +3,12 @@ server:
 cors:
   originPatterns: "http://localhost:8080,http://localhost:3000"
 file:
-    upload-dir: /Code/UploadDir
+  upload-dir: /Code/UploadDir
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-length: 3600000
 email:
   subject: "Default Subject"
   message: "Default Message"
@@ -47,6 +52,8 @@ logging:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 spring-doc:
-  paths-to-match: /api/**/v1/**
+  paths-to-match:
+    - /api/**/v1/**
+    - /auth/**
   swagger-ui:
     use-root-path: true
